# outlier_management

./: .gitignore  README.md  download_pdfs.py  pyproject.toml  update_outliers.sql
outlier_management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
semantic_outlier/: augmented_hs_codes.jsonl  docker-compose.yml  semantic_outlier_checker.py  semantic_outlier_llm_cache.jsonl  semantic_outlier_llm_checker.py  semantic_outlier_llm_flags.csv  semantic_outlier_mismatches.csv  semantic_outlier_results.csv  semantic_outlier_results_sample.csv  semantic_outlier_results_top5.csv
