[project]
name = "outlier-management"
version = "0.1.0"
description = "Outlier and semantic outlier detection for shipment data."
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "google-genai>=0.8.0",
    "tqdm>=4.66.0",
    "bs4>=0.0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
